<resources>
    <string name="app_name">Task-Calculator</string>
    <string name="income_id">Income</string>
    <string name="outcome_id">Outcome</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_10">HITUNG</string>
    <string name="button_11">DELETE</string>
    <string name="gambar_button">Gambar</string>
    <string name="value_res">Balance</string>
</resources>
